--- a/np.Shared/src/react/DynamicDialog/DynamicDialog.css
+++ b/np.Shared/src/react/DynamicDialog/DynamicDialog.css
@@ -40,14 +40,15 @@
 .dynamic-dialog-header {
     background-color: var(--bg-alt-color);
     display: flex;
-    /* Needed to center the header */
     align-items: center;
-    justify-content: space-between;
-    padding: 0.3rem;
-    border-bottom: 1px solid #ddd;
-    position: relative;
-    /* Adjusted height for better visibility */
-    /* height: 40px; */
+    justify-content: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--tint-color);
+    margin: 0;
+    background: none;
+    line-height: 40px;
+    /* Match the height of the buttons container */
 }
 
 /* Heading style for settings dialog */
@@ -61,12 +62,7 @@
 
 /* Style for the centered header */
 .dynamic-dialog-title {
-    /* position: absolute; */
-    /* left: 50%; */
-    /* transform: translateX(-50%); */
-    font-size: 1.2rem;
-    font-weight: 600;
-    color: var(--tint-color);
+    flex-grow: 1;
     text-align: center;
 }
 
@@ -398,6 +394,39 @@
         line-height: 40px;
         /* Match the height of the buttons container */
     }
+
+    /* Add styles for button-group */
+    .ui-button-group {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        gap: 10px; /* Space between buttons */
+    }
+
+    .ui-button {
+        flex: 1;
+        padding: 8px 12px;
+        background-color: var(--bg-main-color);
+        color: var(--fg-main-color);
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background-color 0.2s, box-shadow 0.2s;
+    }
+
+    .ui-button:hover {
+        background-color: var(--bg-alt-color);
+        color: var(--fg-alt-color);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .default-button {
+        background-color: var(--tint-color);
+        color: var(--bg-main-color);
+        border-radius: 8px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add shadow for emphasis */
+    }
+
 }
 
 /* Hide increment and decrement buttons for number input */
@@ -442,3 +471,4 @@
     font-size: 1rem;
     line-height: 1rem;
 }
+
