--- a/jgclark.Dashboard/src/react/css/dashboard.css
+++ b/jgclark.Dashboard/src/react/css/dashboard.css
@@ -78,7 +78,6 @@ dialog::backdrop {
 	grid-template-rows: min-content;
 	/* grid-auto-flow: column; */
 	/* a little extra gap between first 2 cols */
-	column-rule: 1px dotted var(--tint-color);
 	/* a little spacing at top and bottom of section */
 	/* padding: 2px 2px; */
 	/* turn on top border (from theme CSS) */
@@ -87,9 +86,10 @@ dialog::backdrop {
 
 .sectionInfo {
 	display: block;
-	padding-block-start: 0.4rem;
-	padding-block-end: 0.2rem;
-	padding-inline-start: 0.5rem;
+	/* these padding values have been tweaked to be optically correct, at least for JGC's fonts */
+	padding-block-start: 0.2rem;
+	padding-block-end: 0.25rem;
+	padding-inline-start: 0.6rem;
 	padding-inline-end: 0.5rem;
 	color: var(--fg-sidebar-color);
 	background-color: var(--bg-sidebar-color);
@@ -128,7 +128,7 @@ dialog::backdrop {
 	align-self: center;
 	border: 0px none;
 	box-shadow: none;
-	padding-top: 0px;
+	padding-top: 1px;
 }
 
 /* Next part of sectionInfo. */
@@ -141,19 +141,17 @@ dialog::backdrop {
 	/* align-self: self-end; */
 }
 
-/* Inner grid for details of a section */
+/* Inner grid for details of a section -- allow up to 3 columns if wide enough */
 .sectionItemsGrid {
 	font-size: 1.0rem;
 	/* allow multi-column flow: set max columns and min width, and some other bits and pieces. Reference: https://drafts.csswg.org/css-multicol/#the-multi-column-model */
 	column-count: 3;
-	column-fill: balance;
 	column-width: 25rem;
-	/* column-gap: 1rem; */
-	column-rule: 1px dotted var(--tint-color);
+	column-rule: 1px solid var(--divider-color);
 	column-fill: auto;
 	padding-inline-start: 0.5rem;
-	padding-block-start: 0.4rem; /* 0.3rem; */
-	/* padding-block-end: 0.2rem; */
+	padding-block-start: 0.3rem;
+	padding-block-end: 0.3rem;
 }
 
 .sectionItemRow {
